fix alignments finish desktop breakpoint

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -11,8 +11,8 @@
   }
   @include desktop{
     align-items: center;
-    height: 13vh;
     gap: 6vw;
+    padding: 40px 24px 40px 24px;
   }
   &__logo-wrapper{
     display: flex;
@@ -23,8 +23,8 @@
       padding: 0px;
     }
     @include desktop{
-      padding-left: 130px;
       height: 40%;
+      padding-left: 130px;
     }
   }
 
@@ -63,13 +63,11 @@
       line-height: $section-sheader-height-tablet;
     }
     &--active{
-      color: $primary-light;
       font-weight: 700;
+      color: $primary-light;
       border-bottom: 4px solid $primary-light;
       @include tablet{
         border: none;
-        color: $primary-light;
-        font-weight: 700;
         text-decoration: underline;
         text-decoration-thickness: 3px;
         text-underline-offset: 235%;
@@ -77,7 +75,6 @@
       @include desktop{
         text-decoration-thickness: 4px;
         text-underline-offset: 205%;
-        
       }
       
     }
@@ -134,10 +131,10 @@
       top: 50%;
       margin-top: -12px;
       padding-left: 4vw;
+      font-weight: 700;
+      color: $primary-light;
       font-size: $section-header-size-phone;
       line-height: $section-header-height-phone;
-      color: $primary-light;
-      font-weight: 700;
       @include tablet{
         margin-top: -34px;
         padding-left: 5vw;
@@ -152,13 +149,13 @@
     &__overlay{
       display: flex;
       align-items: center;
-      color: $primary-light;
-      font-size: $section-header-size-phone;
-      line-height: $section-header-height-phone;
-      background-color: $primary-dark;
       opacity: 50%;
       width: 100%;
       height: 100%;
+      background-color: $primary-dark;
+      color: $primary-light;
+      font-size: $section-header-size-phone;
+      line-height: $section-header-height-phone;
     }
 }
 
@@ -223,12 +220,12 @@
     }
   }
   &__p{
-    font-size: $section-body-size-phone;
-    line-height: $section-body-height-phone;
-    font-weight: 400;
-    color: $primary-dark;
     margin: 0px;
     padding-top: 16px;
+    color: $primary-dark;
+    font-weight: 400;
+    font-size: $section-body-size-phone;
+    line-height: $section-body-height-phone;
     &--bold{
       font-weight: 600;
     }
@@ -238,17 +235,19 @@
       line-height: $section-sheader-height-tablet;
     }
     @include desktop{
-      width: 53vw;
-      margin: 40px 0px 0px 6vw;
+      width: 65.4vw;
+      margin: 40px auto 3vh auto;
       padding: 0px;
       font-size: $section-header-size-tablet;
       line-height: $section-header-height-tablet;
     }
   }
   &__author{
-    color: $primary-dark;
     margin: 0px;
     padding: 2vh 0px 1vh 0px;
+    color: $primary-dark;
+    font-size: $section-body-size-phone;
+    line-height: $section-body-height-phone;
     @include tablet{
       padding: 0.8vh 7vw 12px 7vw;
       font-size: 1.2rem;
@@ -256,7 +255,7 @@
     }
     @include desktop{
       width: 65vw;
-      margin: 5px 0px 6vh 6vw;
+      margin: 0px auto 6vh auto;
       padding: 0px;
       font-size: $section-sheader-size-tablet;
       line-height: $section-sheader-height-tablet;
@@ -275,7 +274,7 @@
     }
     @include desktop{
       width: 65vw;
-      margin: 5px 0px 1vh 6vw;
+      margin: 5px auto 1vh auto;
       padding: 0px;
       font-size: $section-header-size-tablet;
       line-height: $section-header-height-tablet;
@@ -375,7 +374,7 @@
     display: flex;
     justify-content: space-between;
     flex-flow: wrap;
-    padding: 7vh 7vw 7vh 7vw;
+    padding: 7vh 7vw 9vh 7vw;
   }
   &__content-wrapper{
       @include tablet{
@@ -403,6 +402,8 @@
     }
     @include desktop{
       justify-content: flex-start;
+      gap: 50px;
+      margin-right: auto;
     }
   }
   &__header-wrapper{
@@ -443,11 +444,15 @@
       width: 38px;
     }
     &--facebook{
-      width: 22px;
+      width: 17px;
+      @include desktop{
+        width: 22px;
+      }
     }
     
   }
   &__subheader{
+    width: max-content;
     color: $primary-light;
     font-size: $section-sheader-size-phone;
     line-height: $section-sheader-height-phone;
@@ -502,7 +507,10 @@
     }
   }
   &__logo{
-    width: 180px;
+    width: 150px;
+    @include desktop{
+      width: 180px;
+    }
   }
   &__copyright{
     color: $primary-light;
